# UEDX80480070ESP32-7inch-Touch-Display

./: README.md  README_CN.md
examples/ESP-IDF/UEDX80480070E-WB-A-SDK/: sdkconfig
examples/ESPHome/: README.md  example_config.yaml
examples/PanelTest/: ESP_Panel_Board_Supported.h
examples/PlatformIO/src/: ESP_Panel_Board_Supported.h
examples/Porting/: ESP_Panel_Board_Supported.h  Porting.ino
examples/WiFiClock/: ESP_Panel_Board_Supported.h
examples/esp_idf/esp32_lvgl_Simulate_IOS/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
examples/esp_idf/esp32_lvgl_Simulate_IOS/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.h
examples/esp_idf/esp32_lvgl_Simulate_IOS/main/ui/fonts/: ui_font_misans96.c  ui_font_symbols16.c
examples/esp_idf/esp32_lvgl_Simulate_IOS/main/ui/images/: ui_img_bg_png.c  ui_img_bigclock_png.c  ui_img_bluetoothcontrl_png.c  ui_img_browser_png.c  ui_img_calculator_png.c  ui_img_camera_png.c  ui_img_car_png.c  ui_img_clock_png.c  ui_img_clockhour_png.c  ui_img_clockminute_png.c  ui_img_clocksecond_png.c  ui_img_contacts_png.c  ui_img_email_png.c  ui_img_filemanager_png.c  ui_img_gallery_png.c  ui_img_jionet_png.c  ui_img_messaging_png.c  ui_img_mi_remote_png.c  ui_img_music_png.c  ui_img_musicbg_png.c  ui_img_nes_png.c  ui_img_notes_png.c  ui_img_phone_png.c  ui_img_qq_png.c  ui_img_qrbarcode_png.c  ui_img_refresh_png.c  ui_img_settings_png.c  ui_img_tips_png.c  ui_img_videos_png.c  ui_img_weather_png.c  ui_img_weatherbg_png.c
examples/esp_idf/esp32_lvgl_Simulate_IOS/main/ui/screens/: ui_aboutui.c  ui_bluetoothcontrlscreen.c  ui_bluetoothset.c  ui_browserscreen.c  ui_caculatorscreen.c  ui_camerascreen.c  ui_carscreen.c  ui_clockscreen.c  ui_contactsscreen.c  ui_datetimeui.c  ui_emailscreen.c  ui_filemanagerscreen.c  ui_galleryscreen.c  ui_home.c  ui_jionetscreen.c  ui_messagescreen.c  ui_miremotescreen.c  ui_musicscreen.c  ui_nesgamescreen.c  ui_nesscreen.c  ui_notesscreen.c  ui_phonescreen.c  ui_qrbarcodescreen.c  ui_rgbledscreen.c  ui_setting.c  ui_videoscreen.c  ui_weatherscreen.c  ui_wifiset.c
examples/esp_idf/lvgl_port/: sdkconfig  sdkconfig.defaults
firmware/: README.md  README_CN.md
(+61 files in other folders)
