SET(SOURCES screens/ui_home.c
    screens/ui_setting.c
    screens/ui_wifiset.c
    screens/ui_aboutui.c
    screens/ui_datetimeui.c
    screens/ui_bluetoothset.c
    screens/ui_clockscreen.c
    screens/ui_musicscreen.c
    screens/ui_weatherscreen.c
    screens/ui_phonescreen.c
    screens/ui_rgbledscreen.c
    screens/ui_nesscreen.c
    screens/ui_nesgamescreen.c
    screens/ui_filemanagerscreen.c
    screens/ui_camerascreen.c
    screens/ui_galleryscreen.c
    screens/ui_notesscreen.c
    screens/ui_contactsscreen.c
    screens/ui_caculatorscreen.c
    screens/ui_videoscreen.c
    screens/ui_carscreen.c
    screens/ui_jionetscreen.c
    screens/ui_qrbarcodescreen.c
    screens/ui_bluetoothcontrlscreen.c
    screens/ui_miremotescreen.c
    screens/ui_emailscreen.c
    screens/ui_browserscreen.c
    screens/ui_messagescreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_bg_png.c
    images/ui_img_camera_png.c
    images/ui_img_clock_png.c
    images/ui_img_gallery_png.c
    images/ui_img_music_png.c
    images/ui_img_settings_png.c
    images/ui_img_notes_png.c
    images/ui_img_weather_png.c
    images/ui_img_contacts_png.c
    images/ui_img_calculator_png.c
    images/ui_img_filemanager_png.c
    images/ui_img_videos_png.c
    images/ui_img_car_png.c
    images/ui_img_jionet_png.c
    images/ui_img_qrbarcode_png.c
    images/ui_img_bluetoothcontrl_png.c
    images/ui_img_mi_remote_png.c
    images/ui_img_tips_png.c
    images/ui_img_nes_png.c
    images/ui_img_phone_png.c
    images/ui_img_email_png.c
    images/ui_img_browser_png.c
    images/ui_img_messaging_png.c
    images/ui_img_refresh_png.c
    images/ui_img_bigclock_png.c
    images/ui_img_clockhour_png.c
    images/ui_img_clockminute_png.c
    images/ui_img_clocksecond_png.c
    images/ui_img_musicbg_png.c
    images/ui_img_weatherbg_png.c
    images/ui_img_qq_png.c
    fonts/ui_font_misans16.c
    fonts/ui_font_misans96.c
    fonts/ui_font_misansbold20.c
    fonts/ui_font_symbols16.c)

add_library(ui ${SOURCES})
